feat: add production warehouse receipt posting